fix(): changed bg color; todo: implement form

--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,10 @@ table {
 
 /* CUSTOM STYLES HERE */
 
+:root {
+  background-color: #051923;
+}
+
 .side {
   position: relative;
   width: 30%;
