--- a/styles.css
+++ b/styles.css
@@ -134,16 +134,20 @@ table {
   background-color: #051923;
 }
 
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 .side {
   position: relative;
   width: 30%;
-  height: 100%;
 }
 #background {
   position: absolute;
   width: 100%;
-  z-index: -1;
   height: 100vh;
+  z-index: -1;
 }
 
 .logo-background {
